<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom_fragment"
    app:startDestination="@id/movies_fragment">


    <fragment
        android:id="@+id/movies_fragment"
        android:name="org.themoviedb.ui.movie.MoviesFragment"
        android:label="@string/bottom_nav_movie_title"
        tools:layout="@layout/fragment_movies"/>

    <fragment
        android:id="@+id/tv_show_fragment"
        android:name="org.themoviedb.ui.tvshow.TvShowFragment"
        android:label="@string/bottom_nav_tv_show_title"
        tools:layout="@layout/fragment_tv_shows"/>
    <fragment
        android:id="@+id/favorite_fragment"
        android:name="org.themoviedb.ui.favorite.view.FavoriteFragment"
        android:label="@string/bottom_nav_favorite_title"
        tools:layout="@layout/fragment_favorite"/>

</navigation>