<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="org.themoviedb.data.remote.response.ErrorResponse" />
    </data>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_error"
            android:fontFamily="@string/roboto_light"
            android:textAlignment="center"
            android:text="@{model.message}"
            tools:text="@string/error_no_internet_connection"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:text="@string/button_retry"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

    </LinearLayout>
</layout>