<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:background="@drawable/bg_bottom_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/top_shape"
        android:layout_width="100dp"
        android:layout_height="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/athens_gray"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp" />


    <TextView
        android:id="@+id/bottom_filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@string/roboto_black"
        android:maxLines="2"
        android:text="@string/dlg_bottom_filter_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_shape"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/list_item_genre_filter"
        tools:itemCount="5"
        app:layout_constraintTop_toBottomOf="@id/bottom_filter_title"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/button_add_apply"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_genre"
        app:cornerRadius="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>