<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_favorite_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/widget_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/list_item_movie_image_desc"
        android:scaleType="centerCrop"
        android:src="@color/athens_gray"
        app:layout_constraintDimensionRatio="H,20:11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/backdrop_spiderman" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_dark"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        app:layout_constraintLeft_toRightOf="@id/progress_rating"
        app:layout_constraintRight_toLeftOf="@id/favorite_button_fab"
        app:layout_constraintTop_toBottomOf="@id/tv_show_image">

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@string/roboto_black"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Spider-Man: Into the Spider-Verse" />

        <TextView
            android:id="@+id/widget_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@string/roboto_light"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="December 14, 2018" />
    </LinearLayout>


</FrameLayout>