<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="org.themoviedb.data.models.Movie" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="112.5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingEnd="8dp"
            android:paddingRight="16dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/tv_show_image"
                android:layout_width="75dp"
                android:layout_height="112.5dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/list_item_movie_image_desc"
                android:scaleType="centerCrop"
                android:src="@color/athens_gray"
                bind:loadImageUrl="@{movie.posterImage}"
                tools:src="@drawable/poster_spiderman" />

            <RelativeLayout
                android:id="@+id/movie_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tv_show_image"
                android:layout_toRightOf="@id/tv_show_image">

                <FrameLayout
                    android:id="@+id/progress_rating"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/oval_solid">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progressDrawable="@drawable/bg_circular_progress_green"
                        android:secondaryProgress="100"
                        bind:setProgressRating="@{movie.rate}"
                        tools:progress="86" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{movie.rate}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="8.6" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@id/progress_rating"
                    android:layout_toRightOf="@id/progress_rating"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@string/roboto_black"
                        android:maxLines="2"
                        android:text="@{movie.title}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="Spider-Man: Into the Spider-Verse" />

                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@string/roboto_light"
                        android:maxLines="2"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:formatDate="@{movie.date}"
                        tools:text="December 14, 2018" />
                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/movie_more_info"
                android:layout_marginStart="-10dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_toEndOf="@id/tv_show_image"
                android:layout_toRightOf="@id/tv_show_image"
                android:background="@color/athens_gray" />

            <TextView
                android:id="@+id/movie_more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/tv_show_image"
                android:layout_toRightOf="@id/tv_show_image"
                android:fontFamily="@string/roboto_regular"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/movie_list_more_info"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>